Fixed offers animations to work on Safari, Opera, and Firefox.

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -47,7 +47,9 @@ pre {
     display: block;
     position: relative;
 
-    transition: transform 0.4s;
+    -webkit-transition: -webkit-transform 0.4s;
+	-moz-transition: -moz-transform 0.4s;
+	transition: transform 0.4s;
 }
 
 .grid figcaption {
@@ -64,8 +66,14 @@ pre {
     top: auto;
     bottom: 0;
     opacity: 0;
-    transform: translateY(100%);
-    transition: transform 0.4s, opacity 0.1s 0.3s;
+    -webkit-transform: translateY(100%);
+	-moz-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	transform: translateY(100%);
+
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+	transition: transform 0.4s, opacity 0.1s 0.3s;
 }
 
 .grid figcaption h3 {
@@ -96,12 +104,20 @@ pre {
 }
 
 .grid figure:hover figcaption {
-    opacity: 1;
-    transform: translateY(0px);
-    transition: transform 0.4s, opacity 0.1s;
+	opacity: 1;
+	-webkit-transform: translateY(0px);
+	-moz-transform: translateY(0px);
+	-ms-transform: translateY(0px);
+	transform: translateY(0px);
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
+	transition: transform 0.4s, opacity 0.1s;
 }
 
 .grid figure:hover img {
+	-webkit-transform: translateY(-50px);
+	-moz-transform: translateY(-50px);
+	-ms-transform: translateY(-50px);
 	transform: translateY(-50px);
 }
 
@@ -126,8 +142,8 @@ pre {
 	left: 0;
 	margin: 5px;
 
-	-webkit-transform: rotate(314deg);
-	-moz-transform: rotate(314deg);
-	-o-transform: rotate(314deg);
+	-webkit-transform: rotate(315deg);
+	-moz-transform: rotate(315deg);
+	-o-transform: rotate(315deg);
 	writing-mode: lr-tb;
 }
